[docs] 부하테스트 후속 과제와 서킷 브레이커 검토 항목 추가
Co-authored-by: Claude <noreply@anthropic.com>